Styled the ul, applying flex wrap, and a fixed width to its items.

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -307,6 +307,20 @@
 /* ================================
             LIST
    ================================ */
+.list {
+  list-style: none;
+  margin: 3rem 0;
+  padding: 3rem 0;
+  border-top: var(--line);
+  border-bottom: var(--line);
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  
+  &__item {
+    flex: 0 0 50%;
+  }
+}
 
 /* ================================
             RECOMMEND
